--- a/_posts/1999-03-10-ades.html
+++ b/_posts/1999-03-10-ades.html
@@ -1,5 +1,5 @@
 ---
-title: Thomas Ad&egrave;s -- S&auml;velt&auml;j&auml;esittely
+title: Thomas Ad&egrave;s—S&auml;velt&auml;j&auml;esittely
 excerpt: <span class="fi">In Finnish</span> Englantilaisen säveltäjän Thomas Adèsin
   nousu kotimaansa menestysten kautta yhdeksi Euroopan suosituimmaksi nykymusiikin
   säveltäjäksi. Tiedonhankinnan menetelmät--kurssin lopputyö Sibelius-Akatemiassa
@@ -41,7 +41,7 @@ image:
 </ol>
 <h3>1. Johdanto</h3>
 <blockquote>
-<p class="quote">Ad&egrave;s, the frighteningly talented boy wonder of English music, has become a prime mover in English music. His work as a composer, conductor, and pianist has caused a nearly total capitulation of critical and popular opinion.... Ad&egrave;s' -- cliches be damned -- is the music of the future.<sup>1</sup></p>
+<p class="quote">Ad&egrave;s, the frighteningly talented boy wonder of English music, has become a prime mover in English music. His work as a composer, conductor, and pianist has caused a nearly total capitulation of critical and popular opinion.... Ad&egrave;s'—cliches be damned—is the music of the future.<sup>1</sup></p>
 <p class="author">--The New York Times, p&auml;iv&auml;m&auml;&auml;r&auml; tuntematon, siteerattu internet-osoitteesta http://www.fabermusic.co.uk/ades.htm</p>
 </blockquote>
 <p>Kirjoitelmassa on tutkittu englantilaisen s&auml;velt&auml;j&auml;n <em>Thomas Ad&egrave;sin</em> t&ouml;iden saamaa vastaanottoa eri maiden lehdist&ouml;ss&auml;, sis&auml;lt&auml;en konserttiesitysten ja levytysten arvosteluja sek&auml; haastatteluja. Samalla on tutkittu s&auml;velt&auml;j&auml;n taustaa ja nousua kotimaansa menestysten kautta yhdeksi Euroopan suosituimmaksi nykymusiikin s&auml;velt&auml;j&auml;ksi.</p>
@@ -49,7 +49,7 @@ image:
 <h3>2. Taustaa</h3>
 <p>Thomas Ad&egrave;s syntyi vuonna 1971 Lontoossa. Musiikkia h&auml;n opiskeli ensin Lontoon Guildhall School Of Music And Dramassa, piano-opettajanaan Paul Berkowitz ja s&auml;vellysopettajanaan Robert Saxton. T&auml;n&auml; aikana h&auml;n voitti pianistien Lutine-palkinnon, sek&auml; vuonna 1989 toisen palkinnon BBC:n Vuoden nuori muusikko--kilpailussa.</p>
 <p>Guildhallin j&auml;lkeen Ad&egrave;s jatkoi opintojaan Cambridgen King's Collegessa, jossa h&auml;nt&auml; opettivat muun muassa Alexander Goehr ja Robin Holloway. H&auml;n on harvinainen nykys&auml;velt&auml;j&auml; siin&auml; mieless&auml;, ett&auml; h&auml;n k&auml;ytt&auml;&auml; teoksissaan opusnumerointia, mik&auml; viittaa toisaalta perinteen tunnustamiseen<sup>2</sup>, toisaalta my&ouml;s s&auml;vellysprosessin etenemiseen jatkuvana kokonaisuutena<sup>3</sup>. Ensimm&auml;inen opusnumerolla varustettu s&auml;vellys on nimelt&auml;&auml;n Five Eliot Landscapes op. 1 sopraanolle ja pianolle vuodelta 1990. Sit&auml; seurasi Chamber Symphony op. 2 samana vuonna. Soittaminen ja s&auml;velt&auml;minen kuuluvat erottamattomana Ad&egrave;sin taiteeseen, mutta niiden yhteensovittaminen ei aina ole ollut itsest&auml;&auml;nselv&auml;&auml;. Selv&auml;&auml; kuitenkin on, ett&auml; k&auml;yt&auml;nn&ouml;n muusikkous korostaa h&auml;nen suoraa suhdettaan musiikkiin fysikaalisena, soivana aisti-ilmi&ouml;n&auml;.<sup>4</sup></p>
-<blockquote><p class="quote">Muistan aloittaneeni ensimm&auml;iset harjoitukseni ja ajatelleeni: min&auml; saan aikaan kaikki n&auml;m&auml; &auml;&auml;net! Se oli niin -- tied&auml;tteh&auml;n -- modernia. Se kuulosti todellakin hyvin modernilta musiikilta: naksahduksia siell&auml;, poksahtelua t&auml;&auml;ll&auml;, raapimista, riipimist&auml;, yksi korkea s&auml;vel, toinen matala. Kappale oli nyt poissa k&auml;sist&auml;ni, se oli jokin soittimien lomassa ry&ouml;miv&auml; olento. En koskaan unohda tuota hetke&auml;. Ja sen j&auml;lkeen, luulisin, minulla ei ollut en&auml;&auml; paluuta.<sup>5</sup></p>
+<blockquote><p class="quote">Muistan aloittaneeni ensimm&auml;iset harjoitukseni ja ajatelleeni: min&auml; saan aikaan kaikki n&auml;m&auml; &auml;&auml;net! Se oli niin—tied&auml;tteh&auml;n—modernia. Se kuulosti todellakin hyvin modernilta musiikilta: naksahduksia siell&auml;, poksahtelua t&auml;&auml;ll&auml;, raapimista, riipimist&auml;, yksi korkea s&auml;vel, toinen matala. Kappale oli nyt poissa k&auml;sist&auml;ni, se oli jokin soittimien lomassa ry&ouml;miv&auml; olento. En koskaan unohda tuota hetke&auml;. Ja sen j&auml;lkeen, luulisin, minulla ei ollut en&auml;&auml; paluuta.<sup>5</sup></p>
 <p class="author">--H&auml;yrinen, Antti: Thomas Ad&egrave;s. Musica Nova Helsinki 5.--12.3.1999 Focus Ad&egrave;s, 6--7.</p>
 </blockquote>
 <h3>3. Nousu julkisuuteen</h3>
@@ -145,8 +145,8 @@ image:
 <h3>8. Kirjallisuus</h3>
 <ul>
 <li>Clements, Andrew: Thomas Ad&egrave;s Takes Over The Asylum. BBC Music Magazine, 12/1997, 20. BBC Magazines, a division of BBC Worldwide Publishing, England 1997.</li>
-<li>Giffin, Glenn: In Review: From Around The World -- Aspen. Opera News, 6.12.1997, 78--79. The Metropolitan Opera Guild, Inc., USA 1997.</li>
-<li>Ginell, Richard S.: Concerts Everywhere: Los Angeles -- Los Angeles Philharmonic: New Music Group -- Kurtag "Grabstein f&Atilde;&frac14;r Stephan". American Record Guide, 9--10/1997, 52--53. Record Guide Productions, USA 1997.</li>
+<li>Giffin, Glenn: In Review: From Around The World—Aspen. Opera News, 6.12.1997, 78--79. The Metropolitan Opera Guild, Inc., USA 1997.</li>
+<li>Ginell, Richard S.: Concerts Everywhere: Los Angeles—Los Angeles Philharmonic: New Music Group—Kurtag "Grabstein f&Atilde;&frac14;r Stephan". American Record Guide, 9--10/1997, 52--53. Record Guide Productions, USA 1997.</li>
 <li>Holland, Bernard: A Day of British Sounds, Spirit and Pep. The New York Times, 28.4.1998, B5. The New York Times Company, USA 1998.</li>
 <li>Isopuro, Jukka: Askeettinen biennaalihenki nosti p&auml;&auml;t&auml;&auml;n. Helsingin Sanomat 8.3.1999.</li>
 <li>Isopuro, Jukka: Nelj&auml; l&auml;himenneisyyden muunnelmaa. Helsingin Sanomat 7.3.1999.</li>
@@ -161,9 +161,9 @@ image:
 <li>Murray, David: Aspen: Ad&egrave;s In America. Opera, 1997 annual, 16--17. Opera, DSB, England 1997.</li>
 <li>Murtom&auml;ki, Veijo: Nykymusiikin humaanimmat kasvot. Helsingin Sanomat 12.3.1999.</li>
 <li>H&auml;yrinen, Antti: Thomas Ad&egrave;s. Musica Nova Helsinki 5.--12.3.1999 Focus Ad&egrave;s. Erikoispaino Oy, Helsinki 1999.</li>
-<li>Porter, Andrew: Thomas Ad&egrave;s -- "Life Story". Levyn kansiteksti. EMI Classics Debut CD7243 5 696992 6</li>
-<li>Porter, Andrew: Thomas Ad&egrave;s --"Living Toys". Levyn kansiteksti. EMI Classics Debut CD7243 5 72271 2 4</li>
-<li>Ross, Alex: Musical Events: Court Composers -- Two New Operas: A Bawdy Duchess and Buddhist King. The New Yorker, 18.8.1997, 75--76. The New Yorker Magazine, Inc., USA 1997.</li>
+<li>Porter, Andrew: Thomas Ad&egrave;s—"Life Story". Levyn kansiteksti. EMI Classics Debut CD7243 5 696992 6</li>
+<li>Porter, Andrew: Thomas Ad&egrave;s—"Living Toys". Levyn kansiteksti. EMI Classics Debut CD7243 5 72271 2 4</li>
+<li>Ross, Alex: Musical Events: Court Composers—Two New Operas: A Bawdy Duchess and Buddhist King. The New Yorker, 18.8.1997, 75--76. The New Yorker Magazine, Inc., USA 1997.</li>
 <li>Sibis-lehti 1/1999, 5. Nykypaino Oy, Helsinki 1999.</li>
 <li>Sir&eacute;n, Vesa: Ad&egrave;s pyysi M&auml;lkin johtamaan Britanniaan. Helsingin Sanomat 13.3.1999.</li>
 <li>Sir&eacute;n, Vesa: Brittien Elmo tulee Musica Novaan. Helsingin Sanomat 1.3.1999.</li>
