--- a/_posts/2002-06-13-courses.html
+++ b/_posts/2002-06-13-courses.html
@@ -19,7 +19,7 @@ image:
     <p class="figcaption"><i><a href="https://www.jyu.fi/en">University of Jyväskylä (Finland)</a></i></p>
   </figcaption>
 </figure>
-<p>As a humble effort to document my life, here's a list of courses included in my Master of Science (Econ.) degree -- 250 credit units all together.</p>
+<p>As a humble effort to document my life, here's a list of courses included in my Master of Science (Econ.) degree—250 credit units all together.</p>
 <p>It's just a plain list for me to remember what I've been studying, and maybe to show you what I'm interested in (or what I was obliged to study to finish the degree!). I'll let you guess which subjects on this list I liked the most.</p>
 <h3>Advanced studies in Information Systems Science</h3>
 <ul>
