--- a/_posts/2007-02-09-welcome.html
+++ b/_posts/2007-02-09-welcome.html
@@ -19,5 +19,5 @@ image:
   </figcaption>
 </figure>
 <p>After having my website online for years without any major updates, I at last found the time to design my new WordPress powered site. I have a new domain name too: <em>akikoo.org</em>.</p>
-<p>For the first time in a personal project, I'm using blog software -- which I find pretty useful as a <abbr title="Content Management System">cms</abbr> too. <a href="http://www.akikoo.org/feed" title="Syndicate akikoo.org (RSS 2.0)">RSS 2.0 feed</a> is available for those who can never get enough of the web.</p>
+<p>For the first time in a personal project, I'm using blog software—which I find pretty useful as a <abbr title="Content Management System">cms</abbr> too. <a href="http://www.akikoo.org/feed" title="Syndicate akikoo.org (RSS 2.0)">RSS 2.0 feed</a> is available for those who can never get enough of the web.</p>
 <p>If you have any comments, don't hesitate to <a href="http://www.akikoo.org/contact" title="contact form">contact me</a>.</p>
