--- a/_posts/2007-06-17-brussels.html
+++ b/_posts/2007-06-17-brussels.html
@@ -26,9 +26,9 @@ image:
 <h3>Positive remarks</h3>
 <ul>
 <li>Many people in Brussels are nice, relaxed and open-minded (I should add when they're not driving!). Sometimes they can be a bit formal, but it's not necessarily a bad thing. When you talk to them, they're very helpful and hospitable.</li>
-<li>Brussels is a city of culture and festivals -- especially in the summer. Many of these happenings are free.</li>
+<li>Brussels is a city of culture and festivals—especially in the summer. Many of these happenings are free.</li>
 <li>Central location in Europe: it's easy to travel to international destinations.</li>
-<li>Lots of international organisations. This brings about a lot of work possibilities -- and lots of qualified candidates too.</li>
+<li>Lots of international organisations. This brings about a lot of work possibilities—and lots of qualified candidates too.</li>
 <li>History, art, architecture. Brussels, the capital of Art Nouveau, still has some 1200 Art Nouveau buildings. You can have a drink at the same bar where <a href="http://en.wikipedia.org/wiki/Ren%C3%A9_Magritte"> Ren&eacute; Magritte</a> used to go, but what's largely missing here is modern architecture.</li>
 <li>Three official languages. This makes Belgium open to influences. The existence of linguistic barrier is not always appreciated in Belgium, but I think it's good for any country to have more than one official language.</li>
 <li>Belgian beers, chocolate, and fries are admittedly the best in the world.</li>
