--- a/_posts/2007-06-22-favbooks1.html
+++ b/_posts/2007-06-22-favbooks1.html
@@ -1,7 +1,7 @@
 ---
 title: Books to bring to a desert island, Part I
-excerpt: "<p>Without these books -- or without having met the people who recommended
-  some of them -- I wouldn't be the kind of person I am today. I'll start with some
+excerpt: "<p>Without these books—or without having met the people who recommended
+  some of them—I wouldn't be the kind of person I am today. I'll start with some
   of my all-time favourite books that mean a lot to me personally.</p>"
 date: '2007-06-22 15:52:50 +0200'
 date_gmt: '2007-06-22 13:52:50 +0200'
@@ -19,7 +19,7 @@ image:
     <p class="figcaption"><span lang="fr">Le Petit Prince</span>, by Antoine de Saint-Exupéry. <i><a href="http://www.amazon.com/o/ASIN/0156013983/">Amazon</a></i>.</p>
   </figcaption>
 </figure>
-<p><img src="/assets/images/2007/06/books1/books.png" class="l" alt="Inspiring books" />Without these books -- or without having met the people who recommended some of them -- I wouldn't be the kind of person I am today. I'll start with some of my all-time favourite books that mean a lot to me personally.</p>
+<p><img src="/assets/images/2007/06/books1/books.png" class="l" alt="Inspiring books" />Without these books—or without having met the people who recommended some of them—I wouldn't be the kind of person I am today. I'll start with some of my all-time favourite books that mean a lot to me personally.</p>
 <ul class="books">
 <li>
 <h3><a href="http://www.amazon.com/o/ASIN/0140448071/" title="N. Gogol: Dead Souls"><img alt="" src="/assets/images/2007/06/books1/gogol.png" />Dead Souls</a> (Finnish language edition)</h3>
@@ -46,8 +46,8 @@ image:
 <h4>by Fyodor Dostoevsky</h4>
 <p>Explorations in psychology, philosophy and existentialism. The greatest of all time. Read all of him. I have the Finnish language edition (Arvi A. Karisto OY, 1959), translated by Valto Kallama. I love it.</p>
 </li>
-<li>
-<h3><a href="http://www.amazon.com/o/ASIN/0312421435/" title="N. Klein: No Logo"><img alt="" src="/assets/images/2007/06/books1/klein.png" />No Logo -- Taking Aim at the Brand Bullies</a></h3>
+<li>-- 
+<h3><a href="http://www.amazon.com/o/ASIN/0312421435/" title="N. Klein: No Logo"><img alt="" src="/assets/images/2007/06/books1/klein.png" />No Logo Taking Aim at the Brand Bullies</a></h3>
 <h4>by Naomi Klein</h4>
 <p>Depressing read. This book changed my thinking forever. An eye opener to say the least. Thanks Naomi!</p>
 </li>
