--- a/_posts/2007-10-21-brussels-shopping.html
+++ b/_posts/2007-10-21-brussels-shopping.html
@@ -56,4 +56,4 @@ image:
 <li><em>Chez Moeder Lambic</em>, 68, Rue de la Savoie, Brussels</li>
 <li><em><a href="http://www.le-tavernier.be/" title="Le Tavernier website">Le Tavernier</a></em>, 445, Chauss&eacute;e de Boondael, 1080 Brussels</li>
 </ul>
-<p>By the way, I don't understand why smoking is not yet banned in small bars and cafes (only in restaurants) -- I hope the legislation needed for the full smoking ban will be introduced in Belgium as soon as possible.</p>
+<p>By the way, I don't understand why smoking is not yet banned in small bars and cafes (only in restaurants)—I hope the legislation needed for the full smoking ban will be introduced in Belgium as soon as possible.</p>
