--- a/_posts/2007-12-08-brussels-resto.html
+++ b/_posts/2007-12-08-brussels-resto.html
@@ -83,7 +83,7 @@ image:
 <li>Al Barmaki 67, Rue des Eperonniers, 1000 Brussels</li>
 <li>Reve d'Orient (Service Traiteur), 142, Rue des Deux Eglises, 1210 Brussels</li>
 </ul>
-<h4>Moroccan -- Maghrib</h4>
+<h4>Moroccan—Maghrib</h4>
 <ul>
 <li><a href="http://sites.resto.com/lepetitchouiaenplus/">Le p'tit Chouia en+</a>, 38, Rue de la Pacification, 1000 Brussels</li>
 <li>La Kasbah, 20, Rue Avenue Dansaert, 1000 Brussels</li>
@@ -110,4 +110,4 @@ image:
 <li>Le Bier Circus, 57, Rue de l'Enseignement, 1000 Brussels</li>
 <li>Beer Mania, 174-176, Chauss&eacute;e de Wavre, 1050 Brussels</li>
 </ul>
-<p>It goes without saying that there are countless other good -- and better -- restaurants in Brussels that are not mentioned here. Go find out yourself! Bon app&eacute;tit! Smakelijk!</p>
+<p>It goes without saying that there are countless other good—and better—restaurants in Brussels that are not mentioned here. Go find out yourself! Bon app&eacute;tit! Smakelijk!</p>
