--- a/_posts/2009-01-11-2009-is-here.html
+++ b/_posts/2009-01-11-2009-is-here.html
@@ -1,6 +1,6 @@
 ---
 title: 2009 is here!
-excerpt: "<p>It's already 2009 -- time sure flies! I thought I'd pick out some personal
+excerpt: "<p>It's already 2009—time sure flies! I thought I'd pick out some personal
   highlights of the passed year, in no particular order.</p>"
 date: '2009-01-11 18:52:46 +0100'
 date_gmt: '2009-01-11 16:52:46 +0100'
@@ -21,9 +21,9 @@ image:
       Photo by <a href="https://unsplash.com/@winstonchen">Winston Chen</a> on <a href="https://unsplash.com/photos/orange-and-purple-bokeh-wallpaper-FuxnBv2ULNc">Unsplash</a></i>.</p>
   </figcaption>
 </figure>
-<p>It's already 2009 -- time sure flies! I thought I'd pick out some personal highlights of the passed year, in no particular order.</p>
+<p>It's already 2009—time sure flies! I thought I'd pick out some personal highlights of the passed year, in no particular order.</p>
 <h3>Spotify</h3>
-<p><em><a title="Homepage of Spotify" href="http://www.spotify.com">Spotify music streaming service</a></em> was launched. This is clearly a major step forward for online music distribution. I hope more and more record companies will join the service -- actually, these companies have no choice but to adapt to the new business model in order to survive. Spotify is currently invite-only, with free accounts available only in some European countries (currently UK, Finland, Sweden, Norway, Spain and France). Spotify Premium (not free) is available in many more countries, including Belgium. You can have your charts sent to <a title="last.fm" href="http://www.last.fm/user/akikoo">last.fm.</a> too.</p>
+<p><em><a title="Homepage of Spotify" href="http://www.spotify.com">Spotify music streaming service</a></em> was launched. This is clearly a major step forward for online music distribution. I hope more and more record companies will join the service—actually, these companies have no choice but to adapt to the new business model in order to survive. Spotify is currently invite-only, with free accounts available only in some European countries (currently UK, Finland, Sweden, Norway, Spain and France). Spotify Premium (not free) is available in many more countries, including Belgium. You can have your charts sent to <a title="last.fm" href="http://www.last.fm/user/akikoo">last.fm.</a> too.</p>
 <h3>Web stuff</h3>
 <p><em><a title="Foxmarks, the essential bookmarking add-on for Firefox" href="http://www.foxmarks.com">Foxmarks</a> Firefox add-on</em> that syncs and backs up your bookmarks and passwords across multiple computers. I can now access all my bookmarks and add new ones from any computer. It's perfect, just what I need.</p>
 <p><em><a title="Ubuntu Linux homepage" href="http://www.ubuntu.com/">Ubuntu Linux</a> with <a title="Homepage of VirtualBox" href="http://www.virtualbox.org">VirtualBox</a> and <a title="Homepage of Wine" href="http://www.winehq.org/">Wine</a></em>. In 2008, I made a transition from Windows XP to Ubuntu (before that, I had <a href="http://www.gentoo.org">Gentoo Linux</a> and Ubuntu installed on separate machines for testing and learning). If I ever have to use Windows anymore, for any reason, I use it virtually, using VirtualBox. I also have Wine installed on Ubuntu for Windows-only software. My 12' PowerBook is used only occasionally. This setup works very well for me.</p>
