--- a/_posts/2009-11-11-realign.html
+++ b/_posts/2009-11-11-realign.html
@@ -1,6 +1,6 @@
 ---
 title: akikoo.org realign
-excerpt: Time goes quickly -- especially on the web -- so I though it was time to
+excerpt: Time goes quickly—especially on the web—so I though it was time to
   <a href="http://www.alistapart.com/articles/redesignrealign/">realign</a> and give
   this site a new, fresh look. While streamlining the site and reorganising some of
   the content, I changed to <a href="http://dev.w3.org/html5/spec/Overview.html#the-doctype"><abbr
@@ -18,7 +18,7 @@ tags:
 image:
   path: /assets/images/social/akikooorg_realign.png
 ---
-<p>Time goes quickly -- especially on the web -- so I though it was time to <a href="http://www.alistapart.com/articles/redesignrealign/">realign</a> and give this site a new, fresh look. While streamlining the site and reorganising some of the content, I changed to <a href="http://dev.w3.org/html5/spec/Overview.html#the-doctype"><abbr title="HyperText Markup Language">HTML5</abbr> DOCTYPE</a> (using the new HTML5 structural elements, with the <a href="http://code.google.com/p/html5shiv">HTML5 IE enabling script</a>), and applied some <abbr title="Cascading Style Sheets">CSS3</abbr> enhancements for browsers that support them.</p>
+<p>Time goes quickly—especially on the web—so I though it was time to <a href="http://www.alistapart.com/articles/redesignrealign/">realign</a> and give this site a new, fresh look. While streamlining the site and reorganising some of the content, I changed to <a href="http://dev.w3.org/html5/spec/Overview.html#the-doctype"><abbr title="HyperText Markup Language">HTML5</abbr> DOCTYPE</a> (using the new HTML5 structural elements, with the <a href="http://code.google.com/p/html5shiv">HTML5 IE enabling script</a>), and applied some <abbr title="Cascading Style Sheets">CSS3</abbr> enhancements for browsers that support them.</p>
 <p>Inspired by the work of many people (see <a href="http://www.alistapart.com/articles/fluidgrids/">Fluid grids</a> for example), I created a liquid 13-column symmetrical grid. By combining the columns into supercolumns, I aligned the elements to the grid structure, as illustrated in the screenshot below.</p>
 <p><img alt="" src="/assets/images/2009/11/akikooorg-redesign-13grid.png" /></p>
 <p>A few words about Internet Explorer 6: I simply couldn't be bothered anymore to make this site work on dead browsers (I do enough of that hacking at work). Instead, I used Malarkey's <a href="http://forabeautifulweb.com/blog/about/universal_internet_explorer_6_css/">Universal IE6 CSS</a> because <a href="http://forabeautifulweb.com/blog/about/time_to_stop_showing_clients_static_design_visuals/">not all browsers need to see the same design</a>. Die IE6, die! </p>
