--- a/_posts/2024-03-13-the-smile-live-in-copenhagen.html
+++ b/_posts/2024-03-13-the-smile-live-in-copenhagen.html
@@ -8,7 +8,7 @@ categories:
 - Motivation
 - Music
 - Photography
-- Wellbeing
+- Well-being
 image:
   path: /assets/images/social/the_smile_copenhagen_20240313.jpg
 ---
