Update Agile Kata Pro Foundation certification badge

--- a/_posts/2024-04-13-certified-agile-kata-pro-level-1.html
+++ b/_posts/2024-04-13-certified-agile-kata-pro-level-1.html
@@ -7,7 +7,7 @@ categories:
 - Motivation
 - Teams
 image:
-  path: /assets/images/social/badge-akpi.png
+  path: /assets/images/social/badge-akpfoundation.png
 ---
 <figure>
   <img src="{{site.imgpath}}/agile_kata.png" alt="" />  
@@ -16,7 +16,7 @@ image:
   </figcaption>
 </figure>
 
-<p><img class="l" src="{{site.imgpath}}/badge-akpi.png" alt="" width="120">I’ve just acquired the <a href="https://www.agilekata.pro/certification">Agile Kata Pro Level 1 (AKP I) certification</a> at AgileKata.pro <span aria-label="smile" role="img">🙂</span>. I’m constantly on the lookout for better ways and outcomes. Having used the Agile Kata a few times here and there during the last years, the obvious next natural stepping stone on my journey was to formalise this experience with a certification.</p>
+<p><img class="l" src="{{site.imgpath}}/badge-akpfoundation.png" alt="" width="120">I’ve just acquired the <a href="https://www.agilekata.pro/certification">Agile Kata Pro Level 1 (AKP I) certification</a> at AgileKata.pro <span aria-label="smile" role="img">🙂</span>. I’m constantly on the lookout for better ways and outcomes. Having used the Agile Kata a few times here and there during the last years, the obvious next natural stepping stone on my journey was to formalise this experience with a certification.</p>
 <p><strong>Agile Kata</strong> is based on <a href="https://public.websites.umich.edu/~mrother/Homepage.html">Mike Rother’s</a> <a href="https://www.amazon.com/Toyota-Kata-Managing-Improvement-Adaptiveness/dp/0071635238">Toyota Kata</a>, which consists of both <i>Improvement Kata</i> (a routine for continuous improvement), and <i>Coaching Kata</i> (a pattern of teaching the Improvement Kata to others).</p>
 <p>Agile Kata brings the Toyota Kata from the manufacturing world into the agile/knowledge work context. In an agile context, variability is often higher. The inherent complexity of an unclear territory requires short feedback cycles and agile leadership/coaching.</p>
 <p>Navigating unclear territory is typically driven by <i>Experiments</i> (<abbr title="Plan-Do-Check-Act">PDCA</abbr> cycles). Experiments help us move the work from the <i>Current Condition</i> to the <i>Next Target Condition</i>, removing obstacles along the way. In Agile Kata, the <a href="https://agilemanifesto.org/principles.html">12 principles of the Agile Manifesto</a> not only help us understand the <i>Direction or Challenge</i>, but also provide guidance on how to measure the progress of creating value.</p>
