--- a/_posts/2025-05-17-feeding-back-and-forward.html
+++ b/_posts/2025-05-17-feeding-back-and-forward.html
@@ -35,7 +35,7 @@ image:
 <p>One big issue with feedback is that it’s static: <strong>you can’t change the past</strong>. A more interesting and dynamic approach is <a href="https://marshallgoldsmith.com/articles/try-feedforward-instead-feedback/">feedforward</a>: as a giver, you give someone else suggestions for the future and help as much as you can.  And as a receiver, you listen to the suggestions and learn as much as you can. I’ve found this tool to be a valuable addition to my toolbox <span aria-label="smile" role="img">🙂</span></p>
 
 <h2>Systems Thinking</h2>
-<p>There are many other factors in feedback discussions as well: our feelings, identities, relationships and roles, as well as the processes and culture of the wider organisation. In other words, it’s a <strong>complex (human) system</strong>. This not only means that we <strong>see</strong> only part of the problem, but also that we <strong>are</strong> part of the problem.</p>
+<p>There are many other factors in feedback discussions as well: our feelings, identities, relationships and roles, as well as the processes and culture of the wider organisation. In other words, it’s a <strong>complex and nonlinear (human) system</strong>. This not only means that we <strong>see</strong> only part of the problem, but also that we <strong>are</strong> part of the problem. <i>Balancing</i> and <i>reinforcing feedback loops</i>—along with <i>delay</i>—are central to <strong>Systems Thinking</strong>.</p>
 <p>These kinds of <strong>systemic insights</strong> can help us understand how things we do—or fail to do—contribute to, and affect the whole. Feedback is a gift: an opportunity not only to improve ourselves, but also tweak the system. Accepting these insights makes feedback easier to both give and take in. In the intersection there is no one to blame.</p>
 
 <figure>
@@ -85,7 +85,8 @@ image:
   <li>Be specific with your feedback</li>
   <li>Start with <q>I feel...</q>, sharing your feelings, not your judgments</li>
   <li>Challenge the story you’re telling yourself</li>
-  <li>Show empathy, curiosity, and genuine interest</li>
+  <li>Show empathy, curiosity, and genuine interest for connection</li>
+  <li>Be authentic</li>
   <li>Separate impact from intention</li>
   <li>Be aware of cultural differences</li>
 </ul>
