Adapt Work page

--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@ permalink: /work/
 ---
 <div class="l-row">
   <div class="l-cell l-cell-8">
-    <p class="text-intro">Here are some selected examples of delivered projects as well as product work where my role was a mix of research, Scrum, Agile methods, Accessibility, DesignOps and UI development. <a href="https://www.linkedin.com/in/akikoo/">Check my LinkedIn profile</a> if you want to know more, or simply ask me :) I'd be glad to help.</p>
+    <p class="text-intro">Here are some selected examples of delivered projects as well as product work where my role was a mix of research, Scrum, Agile methods, Accessibility, Design Systems and UI development. <a href="https://www.linkedin.com/in/akikoo/">Check my LinkedIn profile</a> if you want to know more, or simply ask me :) I'd be glad to help.</p>
   </div>
 </div>
 
@@ -24,19 +24,24 @@ permalink: /work/
 <div class="l-row">
   <div class="l-cell l-cell-8">
     <h2 class="mt0" id="work-summary">Experience summary</h2>
-    <p>Building on my long international experience in value creation through team work, inclusive UI systems and web accessibility, I am now focusing on Agile methodologies, communication and servant leadership. As <strong>Scrum Master</strong>, my main interest is on people, teams and the wider organisation — rather than on a particular technology — to continuously improve and deliver value. My current ideal work setting is at an international medium-sized product or service design company in Malmö (Öresund) region, or remote.</p>
+    <p>Building on my long international experience in <strong>value creation through teamwork</strong>, inclusive UI systems and web accessibility, I am now focusing on Agile methodologies, communication and servant leadership.</p>
+    <p>Rather than concentrating on a particular technology, my main interest as <strong>Scrum Master</strong> is people, teams and the wider organisation, to continuously improve and become more effective together.</p>
+    <p>My current ideal work setting is at an international, distributed, remote-first (<abbr title="Work From Anywhere">WFA</abbr>), product-led and value-driven organisation in Malmö (Öresund) region, or remote.</p>
 
     <h3>Sweden 2018—present</h3>
-    <p>Working as <a href="https://www.oneagency.se/">One Agency</a> Consultant in projects for various clients, including <a href="https://www.sonymobile.com/global-en/iot-solutions/visilion-logistics/">Sony Mobile Communications</a> in Lund and <a href="https://www.skatteverket.se/">Skatteverket</a> in Malmö as Scrum Master.</p>
-    
+    <p>Working as Consultant Scrum Master/Agile Practitioner at <a href="https://www.trygghansa.se/">Trygg-Hansa</a> in Malmö (mostly remote). Before that, worked at <a href="https://www.sonymobile.com/global-en/iot-solutions/visilion-logistics/">Sony Mobile Communications</a> in Lund and <a href="https://www.skatteverket.se/">Skatteverket</a> in Malmö.</p>
+
     <h3>Denmark 2010—2018</h3>
-    <p>Worked as Web Accessibility Consultant / Senior UI Developer / Architect at <a href="https://www.socialdigital.dk/">Social Digital</a>, <a href="http://diversa.dk/">Diversa</a>, <a href="http://www.digitaslbi.com/dk/">DigitasLBi</a>, <a href="https://podio.com/">Podio</a> and <a href="http://bownty.com/">Bownty</a> in Copenhagen.</p>
+    <p>Worked as Web Accessibility Consultant/Lead UI Developer/Architect at <a href="https://www.socialdigital.dk/">Social Digital</a>, <a href="http://diversa.dk/">Diversa</a>, <a href="http://bownty.com/">Bownty</a>, <a href="https://podio.com/">Citrix (Podio, Beagle)</a>, and <a href="http://www.digitaslbi.com/dk/">DigitasLBi</a> in Copenhagen.</p>
 
     <h3>Belgium 2003—2010</h3>
-    <p>Worked as Web Designer / Accessibility Specialist / UI Developer for various organizations and agencies in Brussels.</p>
+    <p>Worked as Web Communications Officer/Accessibility Specialist/UI Developer for various organizations and agencies in Brussels, including <a href="https://www.eurocockpit.eu/"><abbr title="The European Cockpit Association">ECA</abbr></a>.</p>
     
     <h3>Finland 1999—2002</h3>
     <p>Graduated (2002) from the <a title="University of Jyväskylä: Faculty of Information Technology" href="http://www.jyu.fi/it/en/">University of Jyväskylä</a> with a degree of MSc in Economics and Business Administration. Major: <strong>Information Systems Science</strong> / Minors: multimedia, marketing and music.</p>
+
+    <h3>Finland 1991—1999</h3>
+    <p>Studied music, played gigs and taught the drums, learning to listen, to network and work in a team.</p>
   </div>
 </div>
 
