--- a/work/index.html
+++ b/work/index.html
@@ -5,7 +5,7 @@ permalink: /work/
 ---
 <div class="l-row">
   <div class="l-cell l-cell-8">
-    <p class="text-intro">Here are some selected examples of delivered projects as well as product work where my role was a mix of research, Scrum, Agile methods, Accessibility, Design Systems and UI Development. <a href="https://www.linkedin.com/in/akikoo/">Check my LinkedIn profile</a> if you want to know more, or simply ask me :) I'd be glad to help.</p>
+    <p class="text-intro">Here are some selected examples of delivered projects as well as product work where my role was a mix of research, Scrum, Agile methods, Accessibility, Design Systems and UI Development. <a href="https://www.linkedin.com/in/akikoo/">Check my LinkedIn profile</a> if you want to know more, or simply ask me :) I’d be glad to help.</p>
   </div>
 </div>
 
