--- a/_posts/2025-07-06-breaking-free-from-the-capability-trap.html
+++ b/_posts/2025-07-06-breaking-free-from-the-capability-trap.html
@@ -20,9 +20,9 @@ image:
 <h2>Cognitive Dissonance</h2>
 <p>We all know the mantras: <q>Slow Down To Go Faster</q> and <q>Work Smarter, Not Harder</q>.</p>
 <p>But here’s the uncomfortable truth—most organizations preach these principles while doing the exact opposite.</p>
-<p>I recently discovered an article from 2001, referenced in <a href="https://woodyzuill.com/">Woody Zuill</a>’s brilliant <a href="https://softwareteaming.com/">Software Teaming</a> book: <a href="https://web.mit.edu/nelsonr/www/Repenning=Sterman_CMR_su01_.pdf">Nobody Ever Gets Credit for Fixing Problems That Never Happened: Creating and Sustaining Process Improvement</a> by Nelson Repenning and John Sterman.</p>
 
 <h2>The Capability Trap</h2>
+<p>I recently discovered an article referenced in <a href="https://woodyzuill.com/">Woody Zuill</a>’s brilliant <a href="https://softwareteaming.com/">Software Teaming</a> book: <a href="https://web.mit.edu/nelsonr/www/Repenning=Sterman_CMR_su01_.pdf">Nobody Ever Gets Credit for Fixing Problems That Never Happened: Creating and Sustaining Process Improvement</a> by Nelson Repenning and John Sterman (2001).</p>
 <p>As an avid Systems Thinking learner and advocate, I found the article intriguing. The piece explains why so many teams get trapped in what researchers call the <strong>Capability Trap</strong>—a vicious cycle where mounting pressure forces us to abandon improvement work in favor of “just getting things done“.</p>
 <p>Here’s how it works:</p>
 <ul>
@@ -31,7 +31,9 @@ image:
   <li>We fall further behind, creating more pressure</li>
   <li>The cycle repeats, getting worse each time</li>
 </ul>
-<p>The research reveals something critical: time spent building capability (“working smarter“) and time spent on execution (“working harder“) create competing feedback loops. When leaders see immediate results from pushing harder but delayed results from capability building, they consistently choose the short-term option.</p>
+
+<h2>Feedback Loops and Systems Thinking</h2>
+<p>The research reveals something critical: time spent building capability (“working smarter“) and time spent on execution (“working harder“) create competing <i>feedback loops</i>. When leaders see immediate results from pushing harder but <i>delayed results</i> from capability building, they consistently choose the short-term option.</p>
 <p>The cost? Teams that run faster and faster while accomplishing less and less.</p>
 <p><strong>The solution isn’t revolutionary—it’s disciplined.</strong></p>
 
