Fix rendering issue in excerpt

--- a/_posts/2025-07-12-are-new-scrum-and-kanban-guides-making-us-less-agile.html
+++ b/_posts/2025-07-12-are-new-scrum-and-kanban-guides-making-us-less-agile.html
@@ -1,6 +1,6 @@
 ---
 title: Are New Scrum and Kanban Guides Making Us Less Agile?
-excerpt: New extensions to Scrum and Kanban Guides add complexity to frameworks that succeed through simplicity. Real challenge: changing mindset, not adding theory.
+excerpt: New extensions to Scrum and Kanban Guides add complexity to frameworks that succeed through simplicity. Real challenge is changing mindset, not adding theory.
 date: '2025-07-12 10:19:53 +0100'
 categories:
 - Agile
