--- a/_posts/2025-08-26-from-rope-teams-to-remote-teams.html
+++ b/_posts/2025-08-26-from-rope-teams-to-remote-teams.html
@@ -16,7 +16,7 @@ image:
 <figure>
   <img src="{{site.imgpath}}/from_rope_teams_to_remote_teams.jpg" alt="" />
   <figcaption>
-    <p class="figcaption">Western Breithorn summit (4164m), July 31, 2025. My seventh Alpine four-thousander. <i>Photo by Aki Kärkkäinen</i>.</p>
+    <p class="figcaption"><strong>Western Breithorn summit (4164m)</strong>, July 31, 2025: my seventh Alpine four-thousander. Matterhorn/Monte Cervino (in the clouds) and Dent Blanche in the background. <i>Photo by Aki Kärkkäinen</i>.</p>
   </figcaption>
 </figure>
 
@@ -57,3 +57,4 @@ image:
 <p>No, I’m not an expert alpinist—I’m a curious outdoor enthusiast exploring my limits. But I’ve spent enough time in the mountains to recognize similarities with working life. Experts like Amy C. Edmondson, Patrick Lencioni, J. Richard Hackman, Tom DeMarco, Jon R. Katzenbach, and many others have shaped my understanding of team dynamics and leadership.</p>
 <p>So I’ll ask again: Do you want to share and hold a rope with your team?</p>
 <p>Next time you’re working with your team—remote, hybrid, or AI-enhanced—ask yourself: <strong>are we truly roped together, or just walking side by side?</strong></p>
+<p><em>I dedicate this post to my mother and father who sadly suffer from Alzheimer’s disease and dementia. They turned 90 years old this summer</em> <span aria-label="red heart" role="img">❤️</span>.</p>
